@@ -1,6 +1,9 @@
 # ChangeLog for sys-devel/make
-# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-devel/make/ChangeLog,v 1.93 2011/12/30 15:46:43 halcy0n Exp $
+# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/sys-devel/make/ChangeLog,v 1.94 2012/04/26 13:46:07 aballier Exp $
+
+  26 Apr 2012; Alexis Ballier <aballier@gentoo.org> make-3.82-r3.ebuild:
+  keyword ~amd64-fbsd
 
   30 Dec 2011; Mark Loeser <halcy0n@gentoo.org> make-3.82-r1.ebuild:
   Stable for ppc64; bug #381199
