@@ -1,6 +1,9 @@
 # ChangeLog for sys-devel/automake
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-devel/automake/ChangeLog,v 1.162 2012/04/26 13:07:06 aballier Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-devel/automake/ChangeLog,v 1.163 2012/04/26 13:42:44 aballier Exp $
+
+  26 Apr 2012; Alexis Ballier <aballier@gentoo.org> automake-1.9.6-r3.ebuild:
+  keyword ~amd64-fbsd
 
   26 Apr 2012; Alexis Ballier <aballier@gentoo.org> automake-1.11.5.ebuild:
   keyword ~amd64-fbsd
